<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="157dp"
                android:layout_height="32dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:text="@string/hometype_5"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="187dp"
                android:layout_height="156dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="92dp"
                android:src="@drawable/town_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="68dp"
                android:text="@string/town1_description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="169dp"
                android:layout_height="40dp"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="24dp"
                android:text="@string/town1_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="152dp"
                android:layout_marginEnd="96dp"
                android:text="@string/town1_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="324dp"
                android:layout_marginTop="148dp"
                android:text="@string/visit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/toggleButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="192dp"
                android:layout_marginEnd="16dp"
                android:text="ToggleButton"
                android:textOff="@string/virtually"
                android:textOn="@string/physically"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="128dp"
                android:text="@string/visit_type"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="187dp"
                android:layout_height="156dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="280dp"
                android:src="@drawable/town_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="260dp"
                android:text="@string/town2_description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="169dp"
                android:layout_height="40dp"
                android:layout_marginTop="292dp"
                android:layout_marginEnd="24dp"
                android:text="@string/town2_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="348dp"
                android:layout_marginEnd="96dp"
                android:text="@string/town2_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="324dp"
                android:layout_marginTop="342dp"
                android:text="@string/visit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/toggleButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="382dp"
                android:layout_marginEnd="16dp"
                android:text="ToggleButton"
                android:textOff="@string/virtually"
                android:textOn="@string/physically"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="390dp"
                android:layout_marginEnd="128dp"
                android:text="@string/visit_type"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="187dp"
                android:layout_height="156dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="480dp"
                android:src="@drawable/town_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="460dp"
                android:text="@string/town3_description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="169dp"
                android:layout_height="40dp"
                android:layout_marginTop="492dp"
                android:layout_marginEnd="24dp"
                android:text="@string/town3_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="548dp"
                android:layout_marginEnd="96dp"
                android:text="@string/town3_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="324dp"
                android:layout_marginTop="542dp"
                android:text="@string/visit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/toggleButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="582dp"
                android:layout_marginEnd="16dp"
                android:text="ToggleButton"
                android:textOff="@string/virtually"
                android:textOn="@string/physically"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="590dp"
                android:layout_marginEnd="128dp"
                android:text="@string/visit_type"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="187dp"
                android:layout_height="156dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="680dp"
                android:src="@drawable/town_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="660dp"
                android:text="@string/town4_description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="169dp"
                android:layout_height="40dp"
                android:layout_marginTop="692dp"
                android:layout_marginEnd="24dp"
                android:text="@string/town4_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="748dp"
                android:layout_marginEnd="96dp"
                android:text="@string/town4_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="324dp"
                android:layout_marginTop="742dp"
                android:text="@string/visit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/toggleButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="782dp"
                android:layout_marginEnd="16dp"
                android:text="ToggleButton"
                android:textOff="@string/virtually"
                android:textOn="@string/physically"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="790dp"
                android:layout_marginEnd="128dp"
                android:text="@string/visit_type"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>