<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="InvalidId"
        android:layout_marginTop="10dp"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:src="@color/colorAccent"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_toRightOf="@id/checkbox"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:focusable="false"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView"
        android:text="Title"
        android:layout_marginLeft="20dp"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:focusable="false"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/homeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView"
        android:layout_below="@id/homeTitle"
        android:text="Address"
        android:layout_marginLeft="20dp"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:focusable="false"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/homePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView"
        android:layout_below="@id/homeAddress"
        android:text="Price"
        android:layout_marginLeft="20dp"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:focusable="false"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView"
        android:layout_below="@id/homePrice"
        android:text="@string/visit_type"
        android:layout_marginLeft="20dp"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:focusable="false"
        />
    <RadioGroup
        android:id="@+id/visitType"
        android:layout_toRightOf="@id/visit"
        android:layout_below="@id/homePrice"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/physicalVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physically"
            />
        <RadioButton
            android:id="@+id/virtualVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virtually"
            />
    </RadioGroup>



</RelativeLayout>
